# weekly-metrics-dashboard

./: .env.example  README.md  config.py  db.py  fetch.py  google_api.py  llm.py  main.py  pyproject.toml  railpack.toml
migrations/: env.py  script.py.mako
migrations/versions/: 001_initial_schema.py  002_gsc_page_daily.py  003_gsc_site_daily.py  004_ga4_content_analytics.py  004_ga4_gsc_additions.py  005_ga4_exits_conversions.py
sections/: content_analytics.py  diagnostics.py  fetch_button.py  geo_profound.py  gsc_coverage.py  keyword_performance.py  search_impressions.py  traffic_analytics.py
